Edit booking service page